Finished UI for DetailViewController

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -78,10 +78,55 @@
                     <view key="view" contentMode="scaleToFill" id="bnI-dq-r0M">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6sx-s6-f6K">
+                                <rect key="frame" x="60" y="291" width="294" height="294"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="6sx-s6-f6K" secondAttribute="height" multiplier="1:1" id="f0K-IN-ip3"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="acO-1E-4dL">
+                                <rect key="frame" x="20" y="735" width="374" height="77"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vq1-um-HpI">
+                                        <rect key="frame" x="0.0" y="0.0" width="41.666666666666664" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LK5-gv-t50">
+                                        <rect key="frame" x="0.0" y="28.333333333333371" width="41.666666666666664" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dQs-Gx-2M2">
+                                        <rect key="frame" x="0.0" y="56.666666666666636" width="41.666666666666664" height="20.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="2IC-QX-fq2" firstAttribute="bottom" secondItem="acO-1E-4dL" secondAttribute="bottom" constant="50" id="2EZ-oV-2HM"/>
+                            <constraint firstItem="6sx-s6-f6K" firstAttribute="leading" secondItem="2IC-QX-fq2" secondAttribute="leading" constant="60" id="CMp-jC-os3"/>
+                            <constraint firstItem="2IC-QX-fq2" firstAttribute="trailing" secondItem="acO-1E-4dL" secondAttribute="trailing" constant="20" id="YoW-YM-7Ee"/>
+                            <constraint firstItem="6sx-s6-f6K" firstAttribute="centerX" secondItem="2IC-QX-fq2" secondAttribute="centerX" id="Yu2-cl-lXJ"/>
+                            <constraint firstItem="acO-1E-4dL" firstAttribute="leading" secondItem="2IC-QX-fq2" secondAttribute="leading" constant="20" id="prB-MM-17e"/>
+                            <constraint firstItem="acO-1E-4dL" firstAttribute="top" secondItem="6sx-s6-f6K" secondAttribute="bottom" constant="150" id="soK-0P-SKb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="2IC-QX-fq2"/>
                     </view>
                     <navigationItem key="navigationItem" id="dLa-Pu-gI0"/>
+                    <connections>
+                        <outlet property="emailAddressLabel" destination="dQs-Gx-2M2" id="IPu-XN-Ope"/>
+                        <outlet property="imageView" destination="6sx-s6-f6K" id="A33-b2-a49"/>
+                        <outlet property="nameLabel" destination="Vq1-um-HpI" id="sNg-Pq-PNG"/>
+                        <outlet property="phoneNumberLabel" destination="LK5-gv-t50" id="pJH-Db-7qS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mCF-NI-Yr4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
