Added the code for the detail view and made the checkOp run on the main thread Still getting a queue error

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="vdz-eM-Qb0" kind="show" id="9h4-1x-51r"/>
+                                    <segue destination="vdz-eM-Qb0" kind="show" identifier="ShowPersonDetailSegue" id="9h4-1x-51r"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
