--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -68,16 +68,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="par-lY-mga">
-                                <rect key="frame" x="32" y="128" width="350" height="471.5"/>
+                                <rect key="frame" x="20" y="128" width="374" height="471.5"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4N1-wz-9du">
-                                        <rect key="frame" x="0.0" y="0.0" width="350" height="350"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4N1-wz-9du">
+                                        <rect key="frame" x="12" y="0.0" width="350" height="350"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="4N1-wz-9du" secondAttribute="height" multiplier="1:1" id="par-nI-AX8"/>
                                         </constraints>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Aqg-77-La8">
-                                        <rect key="frame" x="154" y="390" width="42" height="81.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Aqg-77-La8">
+                                        <rect key="frame" x="20" y="390" width="334" height="81.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfI-iY-aMe">
                                                 <rect key="frame" x="0.0" y="0.0" width="42" height="20.5"/>
@@ -100,16 +100,29 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="Aqg-77-La8" firstAttribute="leading" secondItem="par-lY-mga" secondAttribute="leading" constant="20" id="1qn-7u-wyS"/>
+                                    <constraint firstItem="4N1-wz-9du" firstAttribute="width" secondItem="par-lY-mga" secondAttribute="width" multiplier="0.935829" id="4hi-qk-fSs"/>
+                                    <constraint firstAttribute="trailing" secondItem="Aqg-77-La8" secondAttribute="trailing" constant="20" id="Bkv-3y-TcP"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="par-lY-mga" firstAttribute="leading" secondItem="IHf-Bc-b8W" secondAttribute="leading" constant="20" id="8CU-10-n77"/>
                             <constraint firstItem="par-lY-mga" firstAttribute="top" secondItem="IHf-Bc-b8W" secondAttribute="top" constant="40" id="NBz-dl-4uA"/>
                             <constraint firstItem="par-lY-mga" firstAttribute="centerX" secondItem="opd-8f-vUB" secondAttribute="centerX" id="ak6-UN-tlv"/>
+                            <constraint firstItem="IHf-Bc-b8W" firstAttribute="trailing" secondItem="par-lY-mga" secondAttribute="trailing" constant="20" id="f2r-Lz-D0Q"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="IHf-Bc-b8W"/>
                     </view>
                     <navigationItem key="navigationItem" id="MaZ-fv-9SN"/>
+                    <connections>
+                        <outlet property="emailText" destination="0ag-VC-rXJ" id="NOn-Rg-pZG"/>
+                        <outlet property="imageView" destination="4N1-wz-9du" id="YZt-vv-YH8"/>
+                        <outlet property="nameText" destination="vfI-iY-aMe" id="0Pz-MN-mfr"/>
+                        <outlet property="phoneText" destination="4aB-vh-wdp" id="6Rh-0k-pZZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xtH-Qt-D5R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
