--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -48,11 +48,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Users" id="swD-wq-6H6">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="4EF-yI-m2k">
-                            <connections>
-                                <segue destination="zGV-Lc-BAg" kind="show" identifier="AddSegue" id="15o-VW-Ouj"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="4EF-yI-m2k"/>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AXE-KB-7Tm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -150,7 +146,4 @@
     <resources>
         <image name="placeholder" width="100" height="100"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="HZo-pG-qjQ"/>
-    </inferredMetricsTieBreakers>
 </document>
